# sketch-fight

./: .gitignore  .gitmodules  EULA.txt  LICENSE  README.md  build.py  mac-cross.txt  meson.build  meson_options.txt  windows-cross.txt
blend2d-bindings/: meson.build
build-scripts/: make_bindings.py  package.py  push.py
src/: AbstractMethods.gd  Block.tscn  CameraFocus.gd  CameraTarget.gd  CameraTarget.tscn  ColorsHBoxContainer.gd  ColorsHBoxContainer.tscn  Construct.gd  ConstructEditor.gd  ConstructEditor.tscn  ControlState.gd  ConveyorBelt.gd  DefaultPlayerLog.tscn  EditingModuleSlot.gd  EditingModuleSlot.tscn  EditingShip.gd  EditingShip.tscn  Environment.gd  FighterShip.tscn  GameState.gd  Laser.gd  Laser.tscn  LifeBar.gd  LifeBar.tscn  LineSet.gd  LineSet.tscn  Lobby.gd  LobbyScene.tscn  Main.tscn  Module.gd  Module.tscn  ModulePieMenu.tscn  ModuleSlot.gd  ModuleSlot.tscn  MousePuck.gd  NetworkedRigidBody2D.gd  NetworkedRigidBody2D.tscn  NewModuleButton.gd  NewModuleButton.tscn  PieMenu.gd  (+70 more)
