option('game_name', type : 'string', value : 'sketch-fight', description: 'Game name used for export executable and butler upload')
option('godot_name', type : 'string', value : 'godot-headless', description : 'Godot binary path to be searched for')
option('butler_name', type : 'string', value : 'butler', description : 'Name of butler executable used for pushing to the store')
option('scons_name', type : 'string', value : 'scons', description : 'Name of scons executable used for building godot cpp bindings')
option('godot_settings', type : 'string', value : '~/.config/godot/editor_settings-3.tres', description : 'Path to godot\'s editor settings used for caching before exporting to prevent it being deleted')
option('organization_name', type : 'string', value : 'ljhsgames', description : 'Organization to be pushed to with butler for itch')
option('cpu-threads', type : 'string', value : '12', description : 'Number of cpu threads used for compiling godot C++ bindings')