godot_srcs += files(
    'CameraFocus.gd',
    'default_env.tres',
    'doughnut.svg',
    'doughnut.svg.import',
    'editing-lines.svg',
    'editing-lines.svg.import',
    'export_presets.cfg',
    'icon.png',
    'icon.png.import',
    'LineSet.gd',
    'LineSet.tscn',
    'Main.tscn',
    'meson.build',
    'mirror-line.svg',
    'mirror-line.svg.import',
    'MousePuck.gd',
    'PossiblePoint.gd',
    'PossiblePoint.tscn',
    'project.godot',
    'SketchEditor.gd',
    'SketchEditor.tscn',
    'Sketch.gd',
    'Sketch.tscn',
)